components/nonmem/src/parsing/snapshots/nonmem__parsing__parser__tests__can_change_relative_paths@1002b.mod.snap
---
source: components/nonmem/src/parsing/parser.rs
expression: "model.with_modified_paths(Path::new(\"/home/vincent/dataset.csv\"))"
input_file: components/nonmem/test_data/model_paths/1002b.mod
---
$SIZES PD=-100


$PROB A2A101 Population PK Model created from pharos see 1002a_metadata.json for details.


$INPUT LINE ID STUDY TIME=ATFD ATLD NTFD NTLD DAY AMT RATE DUR CMT EVID DVID DV=ODV LDV MDV BLQ LLOQ
       ROUTE DOSEA DOSEN COHORT SEXF RACE AGEBL WTBL EGFRBL EXCFL AN01FL


$DATA /home/vincent/dataset.csv
  IGNORE=L
  IGNORE(AN01FL.EQ.0)
  IGNORE(EXCFL.GT.0)
  IGNORE(ROUTE.EQ.2)


$SUBROUTINE ADVAN13 TOL=9


$MODEL
 COMP = (DEPOT)
 COMP = (CENT)
 COMP = (PERIPH)


$PK
 TVCL = THETA(1)
 TVVC = THETA(2)
 TVQ  = THETA(3)
 TVVP = THETA(4)

 CL   = TVCL*EXP(ETA(1))
 VC   = TVVC*EXP(ETA(2))
 Q    = TVQ*EXP(ETA(3))
 VP   = TVVP*EXP(ETA(4))

 S2   = VC/1000


$DES
 C2 = A(2)/VC
 C3 = A(3)/VP

 DADT(1) = 0
 DADT(2) = Q/VP*A(3) - CL/VC*A(2) - Q/VC*A(2)
 DADT(3) = Q/VC*A(2) - Q/VP*A(3)


$ERROR (OBSERVATIONS ONLY)
 IPRED = F
 Y = IPRED*(1+EPS(1))+EPS(2)


$THETA
 (0, 0.855)     ;1  CL [L/day]
 (0, 3.53)       ;2  VC [L]
 (0, 1.879)     ;3  Q [L/day]
 (0, 7.45)       ;4  VP [L]


$OMEGA BLOCK(2) CORRELATION
 0.008826  ; omega11 CL
 0.2       ; omega21 VC:CL
 0.065505  ; omega22 VC
$OMEGA
 0 FIX   ; omega33 Q
 0 FIX   ; omega44 VP


$SIGMA
 0.01  ; Proportional error
 0 FIX ; Additive error


$EST   METHOD=1 INTERACTION PRINT=5 MAXEVAL=9999 NOABORT NSIG=3 SIGL=9 MSFO=1002a.msf
$COV   SLOW MATRIX=R COMPRESS PRINT=E

$TABLE LINE ID STUDY TIME ATLD NTFD NTLD DAY AMT RATE DUR CMT EVID DVID DV LDV MDV BLQ LLOQ ROUTE DOSEA DOSEN COHORT SEXF RACE AGEBL WTBL EGFRBL EXCFL AN01FL PRED IPRED CWRES WRES NPDE RES
  NOPRINT NOAPPEND ONEHEADER FILE=run.output.tab FORMAT = s1PE12.5

$TABLE ID STUDY TVCL TVVC TVQ TVVP CL VC Q VP ETAS(1:LAST)
  FIRSTONLY NOPRINT NOAPPEND ONEHEADER FILE=run.param.tab
