components/nonmem/src/parsing/snapshots/nonmem__parsing__parser__tests__can_change_relative_paths@3142vc.mod.snap
---
source: components/nonmem/src/parsing/parser.rs
expression: "model.with_modified_paths(Path::new(\"/home/vincent/dataset.csv\"))"
input_file: components/nonmem/test_data/model_paths/3142vc.mod
---
$PROBLEM From bbr: see 3116.yaml for details created from pharos see 3142vc_metadata.json for details.

$ABBR DERIV2=NO

$INPUT C NUM STUDY COHORT ID TIME ATFD ATLD NTFD NTLD DAY OCC EVID CMT AMT DOSEN
      DOSELOC RATE DV LNDV MDV LLOQ BLQ BWT

$DATA /home/vincent/dataset.csv
IGNORE = @

$SUBROUTINE ADVAN13 TOL=9 ;

$MODEL
COMP = (DEPOT)   ;
COMP = (CENTRALP) ;

$PK

KA=THETA(1) * EXP(ETA(1))
CL=THETA(2) * EXP(ETA(2))
V2=THETA(3) * EXP(ETA(3))
F1=THETA(4) * EXP(ETA(4))


;; SCALING FACTOR
S2 = V2    ;


$DES
CP = A(2)/V2

DADT(1) = -KA*A(1)
DADT(2) = KA*A(1) - (CL/V2)*A(2)


$ERROR (OBSERVATION ONLY)
IPRED = F
Y = IPRED*(1+EPS(1)) +EPS(2) ; Combined Additive and Proportional Error

$THETA
0.5      ; THETA1 KA {1/Time}
0.1 FIX      ; THETA2 CL {Volume/Time} [CL].
3        ; THETA3 V2 {Volume} [VC]
1 FIX    ; THETA4 F1


$OMEGA 0 FIX ;1 IIV on KA

$OMEGA BLOCK (3)
0.1       ;2 IIV on CL/F
0.09 0.1  ;3 IIV on VC/F
0.01 0.01 0.01 ;4 IIV on F1

$SIGMA
0.01         ;Proportional Error
0 FIX       ;Additive Error {Concentration}


$EST MAXEVAL=9999 METHOD=1 INTER PRINT=5 MSFO=3116.msf
$COV PRINT=E MATRIX = R

$TABLE NUM ID TIME EVID MDV BLQ NPDE IPRED CWRES ;
NOPRINT ONEHEADERALL FILE=3116.tab

$TABLE NUM ID  KA CL VC=V2 F1  ETAS(1:LAST)
NOPRINT NOAPPEND ONEHEADER FILE=3116par.tab
